# mzv-simplicial-net

./: .gitignore  README.md  deep_discovery_zeta3.ipynb  mathematical_discovery_BEAST_MODE.ipynb  pyproject.toml  run_sweep.py  zeta3_discovery_v2_colab.ipynb
docs/superpowers/plans/: 2026-05-15-zeta-hunter.md  2026-05-18-sheaf-zeta-hunter.md
docs/superpowers/specs/: 2026-05-15-zeta-hunter-design.md  2026-05-18-sheaf-zeta-hunter-design.md
notebooks/: 01_pcf_sweep.ipynb  02_pslq_search.ipynb  03_results_report.ipynb
tests/: test_constants.py  test_pcf_engine.py  test_pslq.py
zeta_hunter/: constants.py  logger.py  pslq.py  report.py
zeta_hunter/pcf/: engine.py  families.py  sweeper.py
