[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zeta-hunter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mpmath>=1.3",
    "numpy>=1.24",
    "torch>=2.0",
    "tqdm>=4.65",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "nbformat>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zeta_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
